-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 2.2
-
Fix Version/s: Impala 2.2
-
Component/s: None
-
Labels:
The following CI run failed with a crash:
http://sandbox.jenkins.cloudera.com/job/impala-master-cdh5-trunk/965/
Here's the bt:
#0 0x00000030bb232625 in raise () from /lib64/libc.so.6 #1 0x00000030bb233e05 in abort () from /lib64/libc.so.6 #2 0x0000000001f1b8e9 in google::DumpStackTraceAndExit () at src/utilities.cc:147 #3 0x0000000001f12f0d in google::LogMessage::Fail () at src/logging.cc:1315 #4 0x0000000001f16aa7 in google::LogMessage::SendToLog (this=0x7fe75b86a750) at src/logging.cc:1269 #5 0x0000000001f154da in google::LogMessage::Flush (this=0x7fe75b86a750) at src/logging.cc:1138 #6 0x0000000001f157ad in google::LogMessageFatal::~LogMessageFatal (this=0x7fe75b86a750, __in_chrg=<value optimized out>) at src/logging.cc:1836 #7 0x0000000000f6e010 in impala::BufferedBlockMgr::Block::Delete (this=0x2d936c60) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/runtime/buffered-block-mgr.cc:138 #8 0x000000000146dc63 in impala::BufferedTupleStream::Close (this=0xdef5500) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/runtime/buffered-tuple-stream.cc:148 #9 0x0000000001542a04 in impala::PartitionedAggregationNode::Partition::Close (this=0x4d16a190, finalize_rows=false) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/exec/partitioned-aggregation-node.cc:558 #10 0x00000000015455b5 in impala::PartitionedAggregationNode::MoveHashPartitions (this=0x74a88300, num_input_rows=2) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/exec/partitioned-aggregation-node.cc:896 #11 0x0000000001540281 in impala::PartitionedAggregationNode::Open (this=0x74a88300, state=0x10e58a00) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/exec/partitioned-aggregation-node.cc:264 #12 0x000000000145d774 in impala::PlanFragmentExecutor::OpenInternal (this=0x301f0f00) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/runtime/plan-fragment-executor.cc:333 #13 0x000000000145d5f0 in impala::PlanFragmentExecutor::Open (this=0x301f0f00) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/runtime/plan-fragment-executor.cc:319 #14 0x00000000010b8158 in impala::FragmentMgr::FragmentExecState::Exec (this=0x301f0d00) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/service/fragment-exec-state.cc:49 #15 0x00000000010aef46 in impala::FragmentMgr::FragmentExecThread (this=0xc2219e0, exec_state=0x301f0d00) at /data/2/jenkins/workspace/impala-master-cdh5-trunk/repos/Impala/be/src/service/fragment-mgr.cc:70
The core etc. can be found on:
vd0212.halxg.cloudera.com:/data/1/coredumps/impala-1815