IMPALA-1815: Making sure Block::Validate() is called with acquired lock

The BufferedBlockMgr::Block::Validate() accesses structures that can be modified by the
block-mgr. Still, we were calling Validate() without having the block-mgr lock acquired.
That was leading to races and DCHECKs.

Change-Id: Ie5628574a9a365eaa4194f0f37da141fa046517f
Reviewed-on: http://gerrit.cloudera.org:8080/116
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Internal Jenkins